--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,37 @@
 body {
     background-color: #1d1e23;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 130px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between; 
+    background-color: #0d0b0c;
+    border-bottom: 2px solid rgb(185, 145, 211);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    align-items: center;
+    z-index: 1000;
+    margin: 0;
+    height: 60px;
+}
+
+
+.nav-list {
+    display: flex;
+    list-style-type: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 5px;
+}
+
+li a {
+    display: flex;
+    padding: 12px;
+    color:rgb(185, 145, 211);
+    text-decoration: none;
 }
 
 .pokemon-img {
@@ -23,9 +54,15 @@ body {
 
 .pokemon-style {
     border: 1px solid black;
+    border-radius: 10px;
     background-color: #fff;
     padding: 30px;
     margin: 10px;
     align-items: center;
     text-align: center;
+}
+
+.pokemon-style:hover {
+    opacity: 0.5;
+    cursor: pointer;
 }
