--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ li a {
     text-decoration: none;
 }
 
+li a:hover {
+    color: #fff;
+    background-color: #211c1f;
+    border-radius: 5px;
+}
+
 .pokemon-img {
     width: 200px;
     height: 200px;
@@ -76,3 +82,25 @@ li a {
 i {
     display: block;
 }
+
+#types {
+    display: flex;
+    flex-wrap: column;
+    height: 100%;
+}
+
+.type-style {
+    border: 1px solid black;
+    border-radius: 7px;
+    background-color: #fff;
+    padding: 5px;
+    margin: 10px;
+    align-items: center;
+    text-align: center;
+}
+
+.type-style:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
