--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*GLOBAL DESIGN*/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -52,15 +53,56 @@ li a:hover {
     border-radius: 5px;
 }
 
+.li-current {
+    color: #fff;
+    background-color: #151214;
+    border-radius: 5px;
+    text-decoration: underline;
+}
+
+footer {
+    padding: 60px;
+    background-color: #0d0b0c;
+    border-top: 2px solid rgb(185, 145, 211);
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+footer p {
+    color: #fff;
+    align-self: flex-end;
+}
+
+footer a {
+    color: rgb(185, 145, 211);
+}
+
+/*INDEX*/
+#pokemon-show {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.fa-solid {
+    font-size: 30px;
+    color: rgb(185, 145, 211);
+    margin: 10px;
+    cursor: pointer;
+    margin: 20px;
+}
+
 .pokemon-img {
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
 }
 
 #pokemon-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -104,3 +146,37 @@ i {
     cursor: pointer;
 }
 
+/*DETAILS*/
+.pokemon-details {
+    background-color: #fff;
+    border: 2px solid rgb(185, 145, 211);
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    border-radius: 10px;
+}
+
+#image {
+    width: 30%;
+    max-height: 80%;
+    margin: auto;
+}
+
+#text {
+    width: 50%;
+}
+
+#text p, h2 {
+    margin: 15px;
+}
+
+.text-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.box-shadow {
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
