--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
     background-color: #1d1e23;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 130px;
+    margin-top: 100px;
 }
 
 nav {
@@ -30,7 +30,6 @@ nav h1 {
     margin-right: 40px;
     font-family: 'Lobster', cursive;
 }
-
 
 .nav-list {
     display: flex;
@@ -78,6 +77,10 @@ footer a {
     color: rgb(185, 145, 211);
 }
 
+footer a:hover {
+    color: #fff;
+}
+
 /*INDEX*/
 #pokemon-show {
     display: flex;
@@ -103,7 +106,6 @@ footer a {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-
 }
 
 .pokemon-style {
