--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,8 @@ footer a:hover {
 }
 
 .pokemon-style {
+    display: flex;
+    flex-direction: column;
     border: 1px solid black;
     border-radius: 10px;
     background-color: #fff;
@@ -120,6 +122,7 @@ footer a:hover {
     margin: 10px;
     align-items: center;
     text-align: center;
+    color: #000;
 }
 
 .pokemon-style:hover {
