--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ i {
     justify-content: space-evenly;
 }
 
-#types, #encounters {
+#encounters {
     display: flex;
     flex-direction: column;
     max-height: 600px;
@@ -164,7 +164,7 @@ i {
     width: 30%;
 }
 
-#types h2, #encounters h2 {
+#encounters h2 {
     position: sticky;
     top: 0;
     background-color: #fff;
@@ -255,7 +255,7 @@ i {
 }
 
 /*SEARCH*/
-.search-container {
+#find-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -264,10 +264,32 @@ i {
     width: 80%;
     height: 100%;
     color: #fff;
+
+}
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    color: #fff;
+    width: 100%;
+}
+
+#search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    color: #fff;
 }
 
 #search-input {
-    width: 100%;
+    width: 300px;
     height: 50px;
     border-radius: 10px;
     border: 2px solid rgb(185, 145, 211);
@@ -280,8 +302,9 @@ i {
     background-color: rgb(185, 145, 211);
     border: none;
     border-radius: 10px;
-    width: 150px;
+    width: 200px;
     height: 30px;
+    margin: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -291,3 +314,102 @@ i {
     color: #fff;
 }
 
+#search-result-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+}
+
+
+.matched-pokemon-style {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #fff;
+    padding: 20px;
+    margin: 10px;
+    align-items: center;
+    justify-content: space-between;
+    color: #000;
+    height: 120px;
+    width: 100%;
+}
+
+.matched-pokemon-image {
+    width: 100px;
+    max-height: 100%;
+}
+
+.matched-pokemon-style:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#types-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#types-container > div {
+    width: 20%;
+}
+
+.types-list {
+    align-items: center;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #000;
+    padding: 5px;
+    margin: 10px;
+    text-align: center;
+}
+
+.types-list:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#types {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid rgb(185, 145, 211);
+}
+
+.pokemon-by-types {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.pokemon-by-type > div {
+    width: 20%;
+}
+
+.type-pokemon-style {
+    background-color: #fff;
+    color: black;
+    margin: 15px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.type-pokemon-style:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#type-detail-container {
+    width: 100%;
+}
