--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ i {
     padding: 25px;
     border: 2px solid rgb(185, 145, 211);
     border-radius: 10px;
-    width: 30%;
 }
 
 #encounters h2 {
@@ -393,22 +392,26 @@ i {
 }
 
 #type-detail-container {
-    width: 100%;
-
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: auto;
 }
 
 #pokemon-by-types {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 80%;
     justify-content: space-around;
+    margin: auto;
 }
 
 #pokemon-by-types > div {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    
+    justify-content: space-between;
+    width: 20%;
+    height: 250px;
 }
 
 .type-pokemon-style {
@@ -426,6 +429,7 @@ i {
     cursor: pointer;
 }
 
-#type-detail-container {
-    width: 100%;
+#type-comment {
+    color: rgb(185, 145, 211);
+    text-align: center;
 }
