--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ i {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 #encounters {
@@ -191,6 +192,10 @@ i {
     color: rgb(185, 145, 211);
     text-align: center;
     margin-top: 10px;
+}
+
+#random-fact {
+    width: 30%;
 }
 
 #random-fact-container {
@@ -354,10 +359,16 @@ i {
     width: 100%;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid rgb(185, 145, 211);
 }
 
 #types-container > div {
     width: 20%;
+    height: 45px;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    margin-top: 20px;
 }
 
 .types-list {
@@ -381,7 +392,7 @@ i {
 #types {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 50%;
     justify-content: center;
     align-items: center;
     border: 2px solid rgb(185, 145, 211);
@@ -389,6 +400,7 @@ i {
 
 #types-comment {
     color: rgb(185, 145, 211);
+    margin-bottom: 20px;
 }
 
 #type-detail-container {
@@ -411,7 +423,7 @@ i {
     flex-direction: column;
     justify-content: space-between;
     width: 20%;
-    height: 250px;
+    height: 200px;
 }
 
 .type-pokemon-style {
@@ -432,4 +444,14 @@ i {
 #type-comment {
     color: rgb(185, 145, 211);
     text-align: center;
+}
+
+
+#pokemon-fact-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+    margin-top: 30px;
 }
