--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,6 @@ i {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
     width: 100%;
 }
 
@@ -155,6 +154,23 @@ i {
     margin: auto;
     overflow: auto;
     border: 2px solid rgb(185, 145, 211);
+    border-radius: 8px;
+    height: 80%;
+}
+
+#encounters-container {
+    margin: auto;
+    width: 80%;
+    height: 100%;
+}
+
+#pokemon-fact-container {
+    height: 450px;
+}
+
+#encounter-fact-container {
+    height: 100%;
+    width: 30%;
 }
 
 .frame {
@@ -164,22 +180,16 @@ i {
     border-radius: 10px;
 }
 
-#encounters h2 {
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-    padding: 10px;
-}
-
 .fact-list-style {
     border: 1px solid black;
     border-radius: 7px;
-    background-color: #fff;
+    background-color: rgb(185, 145, 205);
+    margin-top: auto;
     padding: 5px;
     margin: 10px;
-    margin-top: auto;
     align-items: center;
     text-align: center;
+    width: 100%;
 }
 
 .frame h2 {
@@ -196,6 +206,7 @@ i {
 
 #random-fact {
     width: 30%;
+    height: 100%;
 }
 
 #random-fact-container {
@@ -203,9 +214,12 @@ i {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    height: 80%;
 }
 
 #fact-container {
+    height: 100%;
+    width: 900px;
     display: flex;
     background-color: #fff;
     color: black;
@@ -376,7 +390,7 @@ i {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: rgb(185, 145, 205);
     color: #000;
     padding: 5px;
     margin: 10px;
@@ -384,18 +398,18 @@ i {
 }
 
 .types-list:hover {
-    opacity: 0.8;
-    background-color: rgb(185, 154, 205);
+    background-color: #fff;
     cursor: pointer;
 }
 
 #types {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 70%;
     justify-content: center;
     align-items: center;
     border: 2px solid rgb(185, 145, 211);
+    margin-top: 40px;
 }
 
 #types-comment {
@@ -446,12 +460,11 @@ i {
     text-align: center;
 }
 
-
 #pokemon-fact-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
     margin: auto;
     margin-top: 30px;
 }
